secDiskussion: Methodenkritik abgeschlossen

--- a/content/2_methode.tex
+++ b/content/2_methode.tex
@@ -39,7 +39,7 @@ Bei den soziodemografischen Daten wurden folgende Parameter erfasst: Geschlecht,
 \paragraph{Medien und Mediennutzung}\label{sec:MedienMediennutzung}
 Die Fragebogenitems für die Erfassung der Medien und der Mediennutzung wurden basierend auf den Vorlagen der Studien von \citeA{Feierabend2017, Blikk2017, Waller2016, Suter2015, Feierabend2015, Kabali2015} neu zusammengestellt. Dabei stand die Mediennutzung während der Betreuung der Kinder in Minuten und das dazu verwendeten Medium im Fokus. Zudem erfolgte eine Spezifizierung der Einschätzung der Mediennutzung hinsichtlich des betreuten Kindes, ob dieses während der Betreuung wach war oder geschlafen hat. Des Weiteren wurde erfragt, ob das Medium für die Nutzung privat oder geschäftlich genutzt wurde. 
 
-Die Einschätzung der absoluten Mediennutzung der Eltern erfolgte anhand der zuletzt erfolgten Betreuung ihrer Kinder. Es wurde davon ausgegangen, dass die Nutzung für die Probanden am einfachsten aus der Erinnerung abrufbar sei. Eine Unterteilung der Nutzung nach Wochentag oder Wochenende wurde als wenig zielführend erachtet. Für die Beantwortung der Fragestellung hätte bereits die reine Mediennutzung gereicht. Es wurde jedoch als hilfreich erachtet, zusätzliche Parameter zur reinen Nutzung zu erheben, um gegebenenfalls die Fragestellung detaillierter beantworten zu können. Erfasst wurden die Mediennutzung und die aufgewendete Zeit, die dazu benutzten Medien, die im Haushalt vorhanden Geräte und auf welches der benutzen Geräte die Eltern während der Betreuung am wenigsten verzichten konnten. Zu den erfassten Medien gehörten: (1) Smartphone, (2) TV, (3) Desktop / Laptop Computer, (4) Tablet, (5) Radio / Stereoanlage / CD-Player, (6) Printmedien (Buch, Zeitung, Heft, Comic), (7) Foto- und / oder Videokamera, (8) Spielekonsole und (9) MP3 Player. Für eine Zusammenstellung der Fragebogenitems siehe Anhang \ref{app:MedienFragebogen}.
+Die Einschätzung der absoluten Mediennutzung der Eltern erfolgte anhand der zuletzt erfolgten Betreuung ihrer Kinder. Die Teilnehmenden konnten sich auf eine grössere Zeitspanne beziehen und sind nicht auf das aktuelle Erleben und Verhalten beschränkt. Hierdurch lassen sich häufig deutlich mehr Informationen sammeln als bei einer gleichlangen Beobachtung \cite{Berk2005}. Zudem wurde davon ausgegangen, dass die Nutzung für die Probanden am einfachsten aus der Erinnerung abrufbar sei. Eine Unterteilung der Nutzung nach Wochentag oder Wochenende wurde als wenig zielführend erachtet. Für die Beantwortung der Fragestellung hätte bereits die reine Mediennutzung gereicht. Es wurde jedoch als hilfreich erachtet, zusätzliche Parameter zur reinen Nutzung zu erheben, um gegebenenfalls die Fragestellung detaillierter beantworten zu können. Erfasst wurden die Mediennutzung und die aufgewendete Zeit, die dazu benutzten Medien, die im Haushalt vorhanden Geräte und auf welches der benutzen Geräte die Eltern während der Betreuung am wenigsten verzichten konnten. Zu den erfassten Medien gehörten: (1) Smartphone, (2) TV, (3) Desktop / Laptop Computer, (4) Tablet, (5) Radio / Stereoanlage / CD-Player, (6) Printmedien (Buch, Zeitung, Heft, Comic), (7) Foto- und / oder Videokamera, (8) Spielekonsole und (9) MP3 Player. Für eine Zusammenstellung der Fragebogenitems siehe Anhang \ref{app:MedienFragebogen}.
 
 Die Operationalisierung erfolgte anhand der Summenbildung der Mediennutzung in Minuten, während denen das Kind betreut wurde. Es wurden insgesamt 11 Tätigkeiten abgefragt: (1) Telefonieren, (2) Textnachrichten lesen und schreiben (SMS, Whatsapp, etc.), (3) Emails lesen und bearbeiten, (4) Lesen / anschauen von Printmedien (Bilder-Bücher), (5) Internet nutzen (surfen, Informationen suchen, etc.), (6) Musik hören, (7) Fernsehen und Videos schauen (Sender, Netflix, DVD, etc.), (8) Radio hören, (9) Fotos oder Videos machen, (10) Video-Games spielen (Handy, Computer, Konsole, etc.) und (11) Hörspiele oder Hörbücher hören. 
 
