--- a/content/4_diskussion.tex
+++ b/content/4_diskussion.tex
@@ -20,17 +20,19 @@ Knapp 91\% der Studienteilnehmer*innen sind weiblich. Nur gerade mal 19 Teilnehm
 
 Ein weiteres auffälliges Merkmal der Stichprobe ist das hohe Bildungslevel der Befragten. 60.6\% gaben an einen Abschluss im tertiären Sektor zu besitzen und 36.2\% gaben an einen Bildungsabschluss im Sekundar II Sektor gemacht zu haben. Gemäss \citeA{Bfs2017} aus dem Jahre 2017 in der Altersgruppe von 25 bis 34 Jährigen haben in der Schweiz 41.8\% einen Sekundar II Abschluss und 50.2\% einen Abschluss auf Tertiärstufe. Die Stichprobe liegt demzufolge leicht über dem schweizerischen Schnitt. Dies könnte auf die starke Rekrutierung aus dem privaten Umfeld des Autors zurückzuführen sein. Zudem scheint die hohe Bildung mit dem Durchschnittsalter der Stichprobe von 33.9 Jahren einher zu gehen. Gemäss \citeA{Bfs2017a} sind  Frauen und Männer mit einer Tertiärbildung tendenziell über 30 Jahre bei ihrem ersten Kind. Obwohl diese Zuordnung nachträglich nicht mehr möglich ist, so kann basierend auf der durchschnittlichen Personen im Haushalt von 3.6 davon ausgegangen werden, dass sich die Stichprobe im Schweizer Mittel bewegt. Ob sich die Bildung, das Einkommen und das Alter auf die Ergebnisse dieser Arbeit auswirken ist schwer zu sagen. Gemäss \citeA{Livingstone2015} haben höher gebildete Eltern mehr Vertrauen in ihre digitalen Fähigkeiten im Umgang mit Medien. Zudem scheinen höher gebildete Eltern mit einem höheren Einkommen digitale Aktivitäten mit ihrem Nachwuchs eher zu reglementieren. Des Weitern sind Soziodemografische Merkmale wichtige Faktoren der Eltern-Kind-Beziehung \cite{Kammerl2012}. Dies scheint in direktem Zusammenhang mit dieser Studie zu stehen. Demzufolge könnten die hohen Bildungsabschlüsse und die hohen Einkommen protektiv auf die Mediennutzung der Eltern im Beisein der Kinder wirken. 
 
-\subsubsection{Fachhochschulabgänger scheinen unter weniger Zeitmangel und Termindruck zu stehen}
+\subsubsection{Haben Fachhochschulabgänger weniger Zeitmangel und Termindruck?}
 Werden die demografischen Daten mit den einzelnen erfassten Skalen in Verbindung gesetzt, so kann ein Zusammenhang zwischen der Bildung und der Stressskala Anforderung gefunden werden. Diese bildet die Wahrnehmung vor allem externer Anforderungen, wie Zeitmangel, Termindruck oder Aufgabenbelastung ab. Die Gruppe Berufsmatura / Fachmittelschule hatte im Vergleich zur Gruppe Höhere Fachschule im Schnitt eine höhere Ausprägung im Bereich Anforderung. Heisst dies nun, dass sich Abgänger einer Berufsmatura in der Regel gefordert fühlen als Abgänger einer höheren Fachschule? Rein intuitiv könnte diesem Ergebnis zugestimmt werden. Abgänger einer Fachhochschule wurden  höhere Anforderungen für die Erreichung des Diploms abverlangt als zur Erreichung einer Berufsmatura, da sich diese beiden Ausbildungen auf unterschiedlich anspruchsvollen Stufen befinden. Doch um es schlüssig interpretieren zu können, müssten weitere Untersuchungen angestellt werden, was im Bezug zur Forschungsfrage in dieser Arbeit an einem anderen Ort zu erfolgen hat. Rückschliessend kann gefolgert werden, dass bezüglich der demografischen Daten der Stichprobe keine signifikanten Zusammenhänge zwischen den einzelnen Skalen gefunden werden konnte. Dies scheint auf eine heterogene Zusammensetzung der Stichprobe bezüglich den erfassten Skalen hinzudeuten, da mittels demografischen Daten keine statistisch signifikanten Gruppen der doch sehr prägenden Konstrukte wie Stress und Bindung gebildet werden konnte. 
 
-\subsection{Unsicher Gebundene verbringen mehr Zeit mit Textnachrichten}
+\subsubsection{Unsicher Gebundene verbringen mehr Zeit mit Textnachrichten}
 Die Bindungsskala \acrfull{aas} bestehend aus den drei Unterskalen \enquote{Nähe}, \enquote{Vertrauen} und \enquote{Angst} kann zu einer erweiterten Skala \enquote{Sichere Bindung} kombiniert werden, in der die Probanden anhand sicherer und unsicherer Bindung aufgeteilt wurden. In der vorliegenden Stichprobe ergab das eine Verteilung von 
 69.7\% sicheren und 30.3\% unsichere Eltern. Dies entspricht in etwa dem Befund der Metaanalyse von \citeA{VanIJzendoorn1988}, die 65\% sicher und 35\% unsicher gebundene Probanden fanden. Was wiederum in etwa den Befunden von \citeA{Ainsworth1970} in ihrem Fremde-Situations-Test von 70\% sicher gebundene und 30\% unsicher gebundenen entspricht. Es kann somit davon ausgegangen werden, dass die vorliegenden Stichprobe hinsichtlich der Bindungsmuster sicher und unsicher der üblichen Verteilung entspricht.
 
 Die erfasste Mediennutzung der Eltern enthält eine Sammlung von unterschiedlichen Medientätigkeiten, die auf unterschiedlichen Medien ausgeführt werden können. Auf dem Smartphone zum Beispiel, können alle die in der Umfrage abgebildeten Tätigkeiten genutzt werden. Im Gegenzug zu einem Buch, mit dem keine Musik gehört und keine Filme geschaut werden kann. Wie bereits geschildert, konnte gemäss Hypothese $H1$ kein Zusammenhang zwischen der Bindung und der Mediennutzung insgesamt festgestellt werden. Werden jedoch die Bindungskategorien \enquote{sicher} und \enquote{unsicher} in Beziehung zu den einzelnen Medientätigkeiten gesetzt, so entsteht zwischen dem Schreiben von Textnachrichten, was vorwiegend auf dem Smartphone erfolgt, und der Bindung ein signifikanter Zusammenhang. Dieser Zusammenhang wird grösser, wenn nur die Zeit der Mediennutzung verwendet wird, wenn das zu betreuende Kind wach ist. Das heisst, dass die Bindung der Eltern durchaus in einem Zusammenhang mit dem Schreiben von Textnachrichten während der Betreuung ihrer Kinder steht, wenn auch nur in einem geringen Mass (geringer Effekt gemäss \citeA{Cohen1988a}). Relevant ist dieser Befund insofern, als dass die Nutzung des Smartphones in dieser Stichprobe während der Betreuung am meisten stattgefunden hat. Zudem gaben die Probanden an, am wenigsten auf das Smartphone während der Betreuung verzichten zu können. Daraus lässt sich schliessen, dass dem Smartphone eine grosse Bedeutung für die Eltern in der Kinderbetreuung zufällt. Da aus den in dieser Arbeit erfassten Daten keine direkte Smartphonenutzung in Minuten extrahiert werden kann (siehe auch \textit{\nameref{sec:Methodenkritik}} weiter unten), könnte es für zukünftige Forschung interessant sein, die Bindung der Eltern im direkten Zusammenhang mit dem Smartphone und den darauf ausgeführten Tätigkeiten zu stellen. Insofern lässt sich die Befürchtung von \citeA{Prekop2017}, dass unsicher Gebundenen lieber eine Bindung zu technischen Dingen aufbauen, im Zusammenhang mit dem Smartphone nicht ganz ausschliessen. Zudem unterstreicht dieser Befund die Ergebnisse weiterer Studien, die Bindung mit  einer Medientätigkeit in Verbindung brachten \cite{Jia2016, Chang2015, Lin2011a}. Diese untersuchten die problematische Internetnutzung (\textit{engl. problematic internet use (PIU)}) und setzten sie in Verbindung mit der Bindungstheorie. Dabei stellten sie fest, dass unsichere Bindung als Prädiktor für die problematische Internetnutzung bezeichnet werden kann. An dieser Stelle sei ebenso auf die Masterarbeit von \citeA{Dietziker2018} verwiesen, der den Zusammenhang der Smartphonenutzung der Eltern auf die Bindungssicherheit ihrer Kinder untersuchte. Dabei konnte er feststellen, dass Eltern mit ambivalent (unsicher) gebundenen Kindern, ihr Smartphone im Beisein ihrer Kinder signifikant häufiger benutzten als Eltern sicher gebundener Kinder. Dies beschreibt keinen gerichteten Zusammenhang und es bleibt offen, ob die Eltern wegen ihren ambivalent gebundenen Kindern das Smartphone mehr benützen, oder ob die häufige Nutzung sich auf die Bindung der Kinder niederschlägt.
 
 \subsubsection{Nähe, Vertrauen, Freude und Wohlbefinden als Prädiktoren für weniger SMS}
-Gemäss der Hypothesenprüfung konnte kein Zusammenhang zwischen der Mediennutzung und der Bindung, bezw. des subjektiven erlebten Stress gefunden werden. Sobald jedoch die Mediennutzung in die einzelnen Tätigkeiten unterteilt wird, kann ein Zusammenhang zwischen der Bindung und dem Schreiben von Textnachrichten gefunden werden (siehe vorheriges Kapitel). Sobald die einzelnen Skalenausprägungen der Konstrukte Bindung, Stress und subjektives Wohlbefinden in ihre Einzelteile zerlegt werden, können diverse Korrelationen zwischen den einzelnen Medientätigkeiten und den einzelnen Skalenausprägungen gefunden werden. Gemäss \citeA{Schmidt2004} lassen sich in der Deutschen Version des \acrshort{aas} die Bindungsstile nicht direkt zuordnen (siehe auch \textit{\nameref{sec:Methodenkritik}}). Somit erscheint es legitim, die einzelnen Skalenausprägungen hinsichtlich der einzelnen Mediennutzung zu prüfen. Auffällig bei den Befunden ist, dass das Schreiben von textnachrichten mit nahezu jeder Skala korreliert (einzelne Ergebnisse siehe \nameref{app:ResultateMedientaetigkeiten} im Anhang). Die Bindungsskalen Nähe und Vertrauen gehen negativ mit dem Schreiben von Textnachrichten währendem das Kind wach ist einher. Wogegen die Bindungsskala Angst positiv einhergeht. Wird davon ausgegangen, dass Textnachrichten vorwiegend auf dem Smartphone geschrieben werden, scheinen Probanden, die sich mit Nähe und Intimität in Beziehung zu anderen wohl fühlen und darauf vertrauen können, dass andere für sie erreichbar sind, während der Betreuung weniger mit dem Smartphone beschäftigt zu sein. Zudem scheinen Probanden, die Ängste davor haben in einer Beziehung nicht geliebt zu werden, einen erhöhten Smartphonegebrauch aufzuweisen. Ebenso scheinen Probanden mit einer tiefen Ausprägung auf der Bindungsskala Vertrauen weniger Textnachrichten zu verfassen währendem das Kind schläft. Ein erhöhter Smarpthonegebrauch scheint mit erhöhten Sorgen, Zukunftsängsten und Frustrationsgefühlen einherzugehen. Wohingegen Probanden mit einem hohen Ausmass an Freude das Smartphone eher weniger benutzen, um Textnachrichten zu schreiben. Hingegen schreiben Probanden mit einem ehröhten Stresserleben tendentiell eher mehr Textnachrichten. Bezogen auf das subjektive Wohlbefinden geht ein hohes Wohlbefinden mit einem verringerten Smartphonegrbacuh einher. All diese Skalen deuten darauf hin, dass ein schwacher Zusammenhang zwischen dem Schreiben von Textnachrichten und den einzelnen Skalen vorherrscht. Insgesamt gesehen deuten diese Ergebnisse auf einen Zusammenhang zwischen der Bindung und dem Stress zur Mediennutzung, explizit, dem Smartphonegbrauch hin. Das es sich jedoch um schwache Effekte handelt, wird der Zusammenhang marginal sein und deshalb auch in den aufgestellten Hypothesen nicht abbildbar. Vielmehr könnte von einer Tendenz in diesem Bereich gesprochen werden.  
+Gemäss der Hypothesenprüfung konnte kein Zusammenhang zwischen der Mediennutzung und der Bindung, bezw. des subjektiven erlebten Stress gefunden werden. Sobald jedoch die Mediennutzung in die einzelnen Tätigkeiten unterteilt wird, kann ein Zusammenhang zwischen der Bindung und dem Schreiben von Textnachrichten gefunden werden (siehe vorheriges Kapitel). Sobald die einzelnen Skalenausprägungen der Konstrukte Bindung, Stress und subjektives Wohlbefinden in ihre Einzelteile zerlegt werden, können diverse Korrelationen zwischen den einzelnen Medientätigkeiten und den einzelnen Skalenausprägungen gefunden werden. Gemäss \citeA{Schmidt2004} lassen sich in der Deutschen Version des \acrshort{aas} die Bindungsstile nicht direkt zuordnen (siehe auch \textit{\nameref{sec:Methodenkritik}}). Somit erscheint es legitim, die einzelnen Skalenausprägungen hinsichtlich der einzelnen Mediennutzung zu prüfen. Auffällig bei den Befunden ist, dass das Schreiben von textnachrichten mit nahezu jeder Skala korreliert (einzelne Ergebnisse siehe \nameref{app:ResultateMedientaetigkeiten} im Anhang). Die Bindungsskalen Nähe und Vertrauen gehen negativ mit dem Schreiben von Textnachrichten währendem das Kind wach ist einher. Wogegen die Bindungsskala Angst positiv einhergeht. Wird davon ausgegangen, dass Textnachrichten vorwiegend auf dem Smartphone geschrieben werden, scheinen Probanden, die sich mit Nähe und Intimität in Beziehung zu anderen wohl fühlen und darauf vertrauen können, dass andere für sie erreichbar sind, während der Betreuung weniger mit dem Smartphone beschäftigt zu sein. Zudem scheinen Probanden, die Ängste davor haben in einer Beziehung nicht geliebt zu werden, einen erhöhten Smartphonegebrauch aufzuweisen. Ebenso scheinen Probanden mit einer tiefen Ausprägung auf der Bindungsskala Vertrauen weniger Textnachrichten zu verfassen währendem das Kind schläft. Ein erhöhter Smarpthonegebrauch scheint mit erhöhten Sorgen, Zukunftsängsten und Frustrationsgefühlen einherzugehen. Wohingegen Probanden mit einem hohen Ausmass an Freude das Smartphone eher weniger benutzen, um Textnachrichten zu schreiben. Hingegen schreiben Probanden mit einem ehröhten Stresserleben tendentiell eher mehr Textnachrichten. Bezogen auf das subjektive Wohlbefinden geht ein hohes Wohlbefinden mit einem verringerten Smartphonegrbacuh einher. All diese Skalen deuten darauf hin, dass ein schwacher Zusammenhang zwischen dem Schreiben von Textnachrichten und den einzelnen Skalen vorherrscht. Insgesamt gesehen deuten diese Ergebnisse auf einen Zusammenhang zwischen der Bindung und dem Stress zur Mediennutzung, explizit, dem Smartphonegbrauch hin. Das es sich jedoch um schwache Effekte handelt, wird der Zusammenhang marginal sein und deshalb auch in den aufgestellten Hypothesen nicht abbildbar. Vielmehr könnte von einer Tendenz in diesem Bereich gesprochen werden. 
+
+\textit{TBD: Stresswerte interpretieren!} Stichprobe ist im unteren Dittel angesiedelt. Repräsentativ?
 
 \subsubsection{TBD: Zusammenfassung Interpretation}
 Hier wird nochmals in kurzer Form aufgelistet, was in den vorhergehenden Kapiteln ausführlich besprochen wurde.
@@ -39,14 +41,35 @@ Hier wird nochmals in kurzer Form aufgelistet, was in den vorhergehenden Kapitel
     \item heterogene Gruppe
     \item Mediennutzung basierend auf Textnachrichten signifikant
 \end{itemize}
+Gemäss der Hypothesenthests konnte kein Zusammenhang zwischen der Bindung und des erlebten Stress der Eltern gefunden werden. Die Medientätigkeit, so wie sie in dieser Studie erfasst wurden, scheinen ein zu breites Spektrum abzubilden, welches zu undefiniert betrachtet werden kann. Bindung scheint demzufolge nicht mit allen Medientätigkeiten im Zusammenhang zu stehen, sondern nur mit ausgewählten. Wie in diesem Fall, dem Schreiben von Textnachrichten. Dies sagt jedoch noch nichts über einen möglichen Zusammenhang zwischen dem Medienverhalten der Eltern und den Entwicklungsaufgaben in der Eltern-Kind-Interaktion der Kinder aus. Diese Interaktion wurde gänzlich ausgeklammert, scheint jedoch für zukünftige Forschung zentral zu sein. Auch sagt diese Untersuchung nichts über einen möglichen Zusammenhang zwischen der Bindung der Eltern und der Bindung der Kinder aus. Es könnte gut sein, dass gewisse Medien in einem Zusammenhang zwischen der Bindung der Eltern und der entwickelnden Bindung des Kindes stehen (vgl. Masterarbeit \citeA{Dietziker2018}). Wobei hier zu untersuchen wäre, in welcher Form diese Medien das Bindungsverhalten übertragen. Es scheint jedoch einen Zusammenhang zwischen der Bindung der Eltern und dem Smartphonegebrauch der Eltern während der Betreuung zu geben. Welchen Auswirkungen dies auf die Bindung der Kindern hat, wurde ansatzweise in der Arbeit von \citeA{Dietziker2018} untersucht. Doch wird es weitere Forschung in diesem Gebiet geben müssen. Die Bindung könnte dabei eine zentrale Rolle im Umgang mit dem Smartphone spielen.
 
 % ---------------------------------------
-\subsection{TBD: Methodenkritik} \label{sec:Methodenkritik}
-\begin{itemize}
-    \item Medienerfassung -> keine Unterteilung in Geräte möglich (Smartphone, etc). Umfrage: Abfrage von MP3Player und Tageszeitungen -> eigentlich wollte ich Medien nach Geräten und nicht Medientätigkeit => Problem: Heute kann mit dem Smartphone all die Tätigkeiten erledigt werden (inkl. Radio hören und TV schauen). Was ich eigentlich wollte, wären Geräte wie Smartphone und Tablet, die eine Barriere zwischen Kind und Eltern aufbauen herauskristalliesieren.
-    \item AAS ist in der deutschen Form nicht geeignet um eine Unterteilung in sicher und unsicher vorzunehmen.
-    \item PSQ - es konnten keine Gruppenunterschiede im Geschlecht gefunden werden, im Gegensatz zu \citeA{Fliege2001}, die Unterschiede gefunden haben.
-\end{itemize}
+\subsection{Methodenkritik} \label{sec:Methodenkritik}
+In diesem Kapitel soll auf die in dieser Arbeit verwendete Methode eingegangen  und deren Vorteile sowie Limitation diskutiert werden. Dabei wird auf einzelne Skalen näher eingegangen. Im Abschluss folgt eine kurze Zusammenfassung.
+
+\subsubsection{Vor- und Nachteile eines Onlinefragebogens}
+Vorteile von empirischen Untersuchungen mittels internetbasierten, elektronischen Fragebögen können unter anderem sein \cite{Rey2009}: (1) Die schnelle und kostengünstige Erhebung. Dabei stellte sich die automatische Datenerfassung und die Einsicht in die aktuellen Zwischenergebnisse mittels \citeA{Questback2018} als überaus komfortabel heraus. Durch die Darstellung des aktuellen Teilnehmerstand konnte jederzeit geprüft werden, ob das für diese Studie erreichte Soll erreicht wurde. Dabei musste nach etwa zwei Monaten festgestellt werden, dass ein weiterer Aufwand in der Rekrutierung notwendig war, um für die Berechnung der Hypothesen notwendigen Teilnehmer zu erreichen. (2) Adaptive Struktur der Fragen. Teilnehmer konnten sich nach dem Abschluss des Fragebogens für den Wettbewerb oder Versuchspersonenstunden eintragen lassen. Dabei wurden diese unterschiedlichen Gruppen zu unterschiedlichen Seiten im Fragebogen geleitet. (3) Zeitliche und örtliche Flexibilität. Da der Fragebogen 24 Stunden Online zur Verfügung gestanden hat, konnten die Teilnehmer diesen leicht erreichen. Durch diese Flexibilität konnten Teilnehmer den Fragebogen zu einem Zeitpunkt beginnen und zu einem späteren abschliessen. (4) Erfassungsfehler wurden vermieden. Im Gegensatz zum Papierfragebögen konnten gewisse Antwortoptionen bereits kontrolliert werden. Zum Beispiel war es bei der Angabe des Jahrgangs für die Teilnehmenden nicht möglich, Buchstaben einzutippen. Sie mussten sich zwischen der Eingabe einer Jahreszahl oder dem Enthalten einer Antwort entscheiden. 
+Neben diesen Vorteilen einer Onlinebefragung konnten Nachteile identifiziert werden\cite{Rey2009}: (1) Mehrfachteilnahme möglich. Diese Gefahr wurde zu einem gewissen Grad abgefangen, indem die Software sich die Geräte der Teilnehmenden merkte und eine erneute Teilnahme vom gleichen Gerät unterband. Wurde das Gerät gewechselt, so hätte erneut an der Umfrage teilgenommen werden können. Für diese Umfrage scheint dieses Risiko jedoch vernachlässigbar, denn der zeitliche Aufwand steht verglichen zu einem möglichen Vorteil in einem denkbar ungünstigen Verhältnis (z.B. Mehrfachteilnahme am Wettbewerb, um die Chancen eines Gewinns zu steigern). (2) Fragwürdige Stichprobenrepräsentativität. Natürlich mussten die Teilnehmenden über einen Internetzugang verfügen, um an der Befragung teil zu nehmen. Da es jedoch um die Erhebung der Mediennutzung ging und elektronische Medien sowie Internet eine mögliche Tätigkeit davon waren, scheint dies ein akzepables Mittel zu sein. Vielmehr scheint eine Verzerrung aus der Rekrutierung der Teilnehmenden aus dem Bekanntenkreis des Autors und der Verbreitung an den entsprechenden Departementen der Hochschule sowie einschlägigen Elternplattformen herzurühren. (3) Problematische Vergleichbarkeit. Das Ausfüllen des Fragebogens benötigte Zeit. Nicht alle Eltern haben diese zur Verfügung. Es könnte durchaus sein, dass Eltern mit einem aktuell hohen Stressempfinden den Fragebogen nicht ausfüllten und somit nur Eltern, die sich die Zeit nehmen konnten an der Stuide teil nahmen. Dies hätte sich negativ auf die Forschungsfrage nach dem erlebten Stress der Eltern und die Auswirkung davon auf die Mediennutzung ausgewirkt. Dieser Punkt kann für diese Arbeit nicht ausgeschlossen werden, zumal sich der Stressindex der Stichprobe im unteren drittel befand. Das heisst, die Stichprobe könnte sich aus Eltern zusammensetzen, die zum Zeitpunkt der Befragung Stress in einem Mass empfunden haben, in dem die Teilnahme zu vertreten war. Dabei wäre es für die Beantwortung der Fragestellung hilfreich gewesen, ebenso Eltern mit einem hohen empfunden Stress zu befragen. (4) Hohe Abbrechquote. Die Abbruchquote in dieser Befragung war, trotz Anreiz einer Wettberwerbsteilnahme und der Versuchspersonenstunden, ziemlich hoch. 17\% haben die Umfrage abgeschlossen. Der Rest hat auf der ersten Seite oder später abgebrochen. Durch diesen selektiven Abbrüche scheint das Vorliegen einer Zufallsstichprobe gefährdet zu sein. 
+
+Weitere Vorteile einer Befragung ist unter anderem das Erfassen des subjektive Erlebens der Teilnehmenden \cite{Berk2005}, welches für die Beantwortung der erhobenen Skalen notwendig war. Zudem konnten in der Befragung diejenigen Konstrukte erhoben werden, die für die Beantwortung der Hypothesen notwendig waren (vgl. ebd.). Ein Nachteil der Befragung könnte hingegen das Thema Mediennutzung bezüglich der sozialen Erwünschtheit gespielt  und somit die Antworten verzerrt haben \cite{Rey2012}. Dies könnte geschehen sein, indem der eigenen Medienkonsum während der Betreuung des eigenen Kindes abgeschwächt wurde. Durch die Erfassung der Medienzeit aus der Erinnerung, könnte ein weitere Verzerrung aufgetreten sein, da Menschen sich an ihr vergangenes Verhalten und Erleben nicht immer vollständig erinnern können \cite{Berk2005}. Eine Voraussetzung für die Teilnahme an der Befragung war eine gewisse Kommunikationsfähigkeit. Was unter anderem auch dazu führte, die Bindung der Eltern zu erfassen und nicht auch noch die der Kinder, was in diesem Kontext durchaus angepasst gewesen wäre.
+
+\subsubsection{Querschnittsdesign als Mittel der Wahl}
+Gemäss \citeA{Berk2005, Trautner1997} weisen Querschnittsstudien zwei Vorteile in der Befragung auf: (1) Ökonomie, da die Ergebnisse der Untersuchung unmittelbar zur Verfügung stehen, da nur auf einen Untersuchungszeitpunkt zurückgegriffen werden muss. Da es sich hiermit um eine Masterarbeit handelt, konnten damit Kosten im bereich Personal gespart werden. (2) Bereitschaft zur Teilnahme an der Untersuchung. Teilnehmen scheinen eher bereit zu sein an einer Studie teilzunehmen, die aus nur einem Messzeitpunkt besteht. Dadurch können grössere Stichproben rektrtiert werden, was im Hinblick auf die gestellten Hypothesen notwendig war. 
+
+Neben diesen Vorteilen gehen Querschnittstuditen gemäss \citeA{Berk2005, Trautner1997} mit einigen Nachteilen einher, auf die hier eingegangen werden soll: (1) Konfundierung von Alter und Kohorte. Nicht nur sind die Teilnehmenden unterschiedlich alt, sie stammen auch aus unterschiedlichen Kohorten. Somit sind sie in Querschnittsstudien vermischt (konfundiert). Dieser Umstand wird für diese Arbeit als nicht relevant angesehen, da Angenommen wird, dass der Zusammenhang von Mediennutzung und Bindung Kohortenübergreiffend stattfindet. (2) Konstruierte Entwicklungsverläufe. Einzelner Entwicklungsverläufe wurde in dieser Studie keine Rechnung getragen. Intraindividuelle Veränderung hinsichtlich der Bindung oder des erlebten Stressniveaus werden nicht berücksichtig. Diese Studie lässt sich auf Entwicklungszuständen reduzieren und kann keine Aussage betreffend einer Entwicklung über die Zeit machen. (3) Statistische Ineffizienz. Systematische Unterschiede zwischen einzelner Probanden im Verlauf der Messung bleiben unberücksichtigt. Die Vorhersage einzelner Messwerte ist demzufolge ungenau. Um diesem Umstand entgegenzuwirken, wurde in dieser Arbeit mit einer relativ grossen Stichprobe gearbeitet. (4) Selektive Stichprobe. Das Erstellen von Gruppen anhand der Bindung stellt eine selektive Stichprobe dar. Probanden innerhalb der erstellten Gruppe unterscheiden sich nicht nur anhand der Bindung, sondern durch weitere Eigenschaften. (5) Fragwürdige Generalisierbarkeit. Die in dieser Arbeit gewonnenen Ergebnisse der Untersuchung hängen vom aktuellen kulturellen, sozialen und politischen Kontext der Umfrage ab. Dadurch lassen sie sich nicht zwangsläufig auf zukünftige Stichproben verallgemeinern. 
+
+Die Durchführbarkeit dieser Arbeit stand im Zentrum der Gewichtung. Da es vielmehr um einen ersten Vorstoss in die Richtung der Fagestellung ging, können die Nachteile vernachlässigt werden. Vielmehr wurde eine Bestandesaufnahme angestrebt, auf der weiterführende Forschung betrieben werden kann.
+
+\subsubsection{Reine Smartphonenutzung nicht eindeutig abzugrenzen}
+Die Mediennutzungszeit beinhaltete verschiedene Tätigkeiten, die auf unterschiedlichen Medien ausführbar waren. Wie in den Ergebnissen ersichtlich, konnte zwischen der Bindung und dem Schreiben von Textnachrichten statistisch signifikante Werte gefunden werden. Zudem korrelieren die Bindungs- und Stressskalen sowie die Skala für die Erfassung des subjektiven Wohlbefindens vorwiegend mit dem Schreiben von Textnachrichten. Was darauf hinzudeuten scheint, dass das Medium, mit dem die Tätigkeit während der Betreuung ausgeführt wurde, eine Rolle spielen könnte. In dieser Studie wurde davon ausgegangen, dass die Teilnehmenden ihre Textnachrichten auf dem Smartphone geschrieben haben und nicht über eine entsprechende Funktion auf dem Tablet oder Desktopcomputer. Dies kann jedoch nur für das Schreiben von Textnachrichten rückgeschlossen werden und auch hier bleibt eine gewisse Unbekannte bestehen. Für die übrigen Tätigkeiten ist dies nicht möglich, da sie gut auf anderen Geräten ausgeführt werden können. Im Nachhinein ist deshalb die Zuweisung nicht mehr möglich. Deshalb wäre es in Zukunft angebracht, das entsprechende Medium mit der damit verbrachten Zeit, im besonderen das Smartphone, explizit zu erfassen. Im Bereich der Bindung und der Mediennutzung der Eltern könnte das Smartphone, basierend auf den gefundenen Ergebnissen, eine wichtige Rolle während der Betreuung der Kinder spielen. Zudem es als das Gerät in dieser Stichprobe gehandelt wurde, auf das am wenigsten gerne verzichtet werden konnte. Die Popularität ist leicht nachzuvollziehne, da restlos alle hier erfassten Medientätigkeiten auch auf diesem Gerät genutzt werden können, es handlich genug ist immer dabei zu haben und jederzeit genutzt werden kann. 
+
+\subsubsection{Ist \acrshort{aas} ein geeignetes Instrument?}
+Es ist zu hinterfragen, ob das verwendete Instrument, die \acrfull{aas}, für die Erfassung der Bindungstypen geeignet ist. Gemäss \citeA{Schmidt2004} können in der Deutschen Fassung keine Zuordnungen gemacht werden. Hier wäre zu untersuchen, ob es ein ebenso ökonomisches Instrument gefunden werden kann, welches sich für die Bindungs-Einteilung besser eignen würde. In dieser Arbeit scheint das Instrument jedoch plausible Werte zu liefern, weshalb die Verwendung des \acrshort{aas} gerechtfertigt erscheint. 
+
+\subsubsection{Kann der \acrshort{psq} Eltern adäquat erfassen?}
+Für die Erfassung des aktuell subjektiv Belastungserleben der Eltern wurde das Instrument \acrfull{psq} in der Deutschen Version eingesetzt. Im Unterschied zur von \citeA{Fliege2001} untersuchten Stichprobe, konnte in dieser Stichprobe keine Gruppenunterschiede bezüglich Geschlecht gemacht werden. Bezogen auf die demografischen Daten konnten keine Effekte gefunden werden. Ob dies damit zusammenhing, dass die vorliegende Stichprobe vorwiegend aus weiblichen Teilnehmenden besteht wäre zu untersuchen. Somit scheint das Instrument, auch bezüglich der ökonomischen Durchführbarkeit, angebracht gewesen zu sein und die subjektiv erlebte Belastung der Eltern adäquat erfasst zu haben.
+   
 
 % ---------------------------------------
 \subsection{TBD: Ausblick} \label{sec:Ausblick}
+\textit{TBD:} Neben dem Smartphone wäre auch das Tablet explizit zu erfassen. Beiden diesen Geräten wäre gut vorstellbar, dass sich das Gerät als eine Art physische Barriere zwischen der Eltern-Kind-Interaktion entpuppen würde.
