--- a/content/4_diskussion.tex
+++ b/content/4_diskussion.tex
@@ -63,10 +63,10 @@ Die Durchführbarkeit dieser Arbeit stand im Zentrum der Gewichtung. Da es vielm
 \subsubsection{Reine Smartphonenutzung nicht eindeutig abzugrenzen}
 Die Mediennutzungszeit beinhaltete verschiedene Tätigkeiten, die auf unterschiedlichen Medien ausführbar waren. Wie in den Ergebnissen ersichtlich, konnte zwischen der Bindung und dem Schreiben von Textnachrichten statistisch signifikante Werte gefunden werden. Zudem korrelieren die Bindungs- und Stressskalen sowie die Skala für die Erfassung des subjektiven Wohlbefindens vorwiegend mit dem Schreiben von Textnachrichten. Was darauf hinzudeuten scheint, dass das Medium, mit dem die Tätigkeit während der Betreuung ausgeführt wurde, eine Rolle spielen könnte. In dieser Studie wurde davon ausgegangen, dass die Teilnehmenden ihre Textnachrichten auf dem Smartphone geschrieben haben und nicht über eine entsprechende Funktion auf dem Tablet oder Desktopcomputer. Dies kann jedoch nur für das Schreiben von Textnachrichten rückgeschlossen werden und auch hier bleibt eine gewisse Unbekannte bestehen. Für die übrigen Tätigkeiten ist dies nicht möglich, da sie gut auf anderen Geräten ausgeführt werden können. Im Nachhinein ist deshalb die Zuweisung nicht mehr möglich. Deshalb wäre es in Zukunft angebracht, das entsprechende Medium mit der damit verbrachten Zeit, im besonderen das Smartphone, explizit zu erfassen. Im Bereich der Bindung und der Mediennutzung der Eltern könnte das Smartphone, basierend auf den gefundenen Ergebnissen, eine wichtige Rolle während der Betreuung der Kinder spielen. Zudem es als das Gerät in dieser Stichprobe gehandelt wurde, auf das am wenigsten gerne verzichtet werden konnte. Die Popularität ist leicht nachzuvollziehne, da restlos alle hier erfassten Medientätigkeiten auch auf diesem Gerät genutzt werden können, es handlich genug ist immer dabei zu haben und jederzeit genutzt werden kann. 
 
-\subsubsection{Ist \acrshort{aas} ein geeignetes Instrument?}
+\subsubsection{Erfassung der Bindung mittels \acrshort{aas}?}
 Es ist zu hinterfragen, ob das verwendete Instrument, die \acrfull{aas}, für die Erfassung der Bindungstypen geeignet ist. Gemäss \citeA{Schmidt2004} können in der Deutschen Fassung keine Zuordnungen gemacht werden. Hier wäre zu untersuchen, ob es ein ebenso ökonomisches Instrument gefunden werden kann, welches sich für die Bindungs-Einteilung besser eignen würde. In dieser Arbeit scheint das Instrument jedoch plausible Werte zu liefern, weshalb die Verwendung des \acrshort{aas} gerechtfertigt erscheint. 
 
-\subsubsection{Kann der \acrshort{psq} Eltern adäquat erfassen?}
+\subsubsection{Erfasst der \acrshort{psq} das Belastungserleben der Eltern?}
 Für die Erfassung des aktuell subjektiv Belastungserleben der Eltern wurde das Instrument \acrfull{psq} in der Deutschen Version eingesetzt. Im Unterschied zur von \citeA{Fliege2001} untersuchten Stichprobe, konnte in dieser Stichprobe keine Gruppenunterschiede bezüglich Geschlecht gemacht werden. Bezogen auf die demografischen Daten konnten keine Effekte gefunden werden. Ob dies damit zusammenhing, dass die vorliegende Stichprobe vorwiegend aus weiblichen Teilnehmenden besteht wäre zu untersuchen. Somit scheint das Instrument, auch bezüglich der ökonomischen Durchführbarkeit, angebracht gewesen zu sein und die subjektiv erlebte Belastung der Eltern adäquat erfasst zu haben.
    
 
